solve design issue after testing

--- a/src/app/admin-user-list/admin-user-list.component.html
+++ b/src/app/admin-user-list/admin-user-list.component.html
@@ -1,4 +1,8 @@
 <!-- Admin panel all list of users -->
+<div id="loading">
+    <img id="loading-image" src="/assets/images/loader.gif" alt="Loading..." />
+</div> 
+
 
 <div class="container">
     <h1 class="text-center">User List </h1>
