--- a/src/app/auto-message/auto-message.component.html
+++ b/src/app/auto-message/auto-message.component.html
@@ -1,3 +1,7 @@
+<div id="loading">
+    <img id="loading-image" src="/assets/images/loader.gif" alt="Loading..." />
+</div>
+
 <section class="eventF_page_section d-flex flex-wrap align-content-center">
         <div class="container-fluid">
             <h3 class="text-center">Aso Ebi</h3>
