--- a/src/app/guest-event/guest-event.component.html
+++ b/src/app/guest-event/guest-event.component.html
@@ -1,4 +1,8 @@
 <!-- Event details for guest which invited by celebrants -->
+<div id="loading">
+    <img id="loading-image" src="/assets/images/loader.gif" alt="Loading..." />
+</div>
+
 
 <div class="container" *ngIf="!guestEventDetailsAfterLogin">
     <div class="row">
