--- a/src/app/my-event-details/my-event-details.component.html
+++ b/src/app/my-event-details/my-event-details.component.html
@@ -1,3 +1,8 @@
+<div id="loading">
+    <img id="loading-image" src="/assets/images/loader.gif" alt="Loading..." />
+</div>
+
+
 <div class="initialStep">
     <section class="eventB_page_section d-flex flex-wrap align-content-center">
         <div class="container-fluid">
