--- a/src/app/messages-of-event/messages-of-event.component.html
+++ b/src/app/messages-of-event/messages-of-event.component.html
@@ -1,3 +1,7 @@
+<div id="loading">
+    <img id="loading-image" src="/assets/images/loader.gif" alt="Loading..." />
+</div>
+
 
 <div class="initialStep">
 <section class="eventD_page_section d-flex flex-wrap align-content-center">
